--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ProTech - Login</title>
+    <title>À POINT - Connexion</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -22,14 +22,13 @@
 <body>
 <fieldset>
     <header>
-        <p class="connexion"> Connexion </p>
-        <p> Professeur </p>
+        <p class="connexion"> Connexion - À POINT </p>
     </header>
     <form action="/login" method="post" name="login">
         <div class="login-fields">
             <div class="contain-field">
-                <label for="email" class="login-field-username form-label"> Nom d'utilisateur :</label>
-                <input type="text" placeholder="Username" name="email" id="email" class="input-field-login form-control" required>
+                <label for="email" class="login-field-username form-label"> Email :</label>
+                <input type="email" placeholder="votre.email@domaine.com" name="email" id="email" class="input-field-login form-control" required>
             </div>
             <div class="contain-field">
                 <label for="password" class="login-field-password form-label" > Mot de passe :</label>
