--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>À POINT - Gestion des rendez-vous professionnels</title>
 </head>
 <body>
-<div class="container">
-    <h1>poseuralert</h1>
-    <p class="lead">
-        Welcome on the poseuralert, an App used to ping people who don't show at rendez-vous.
-    </p>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h1 class="display-4 mb-4">À POINT</h1>
+            <p class="lead mb-4">
+                La solution BtoB pour la gestion des rendez-vous et le signalement des clients ne respectant pas leurs engagements.
+            </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Nouveau professionnel ?</h5>
+                            <p class="card-text">Inscrivez-vous gratuitement pour commencer à gérer vos rendez-vous.</p>
+                            <a href="/inscription" class="btn btn-primary">S'inscrire</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">Déjà inscrit ?</h5>
+                            <p class="card-text">Connectez-vous pour accéder à votre espace de gestion.</p>
+                            <a href="/login" class="btn btn-outline-primary">Se connecter</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-4">
+                <h6>Secteurs pris en charge :</h6>
+                <p class="text-muted">Restaurants • Professionnels de santé • Garages • Coiffeurs • Instituts de beauté • Vétérinaires</p>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
