--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ProTech - Login</title>
+  <title>À POINT - Inscription</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -22,13 +22,41 @@
 <body>
 <fieldset class="InscriptionFieldset">
   <header>
-    <p class="connexion"> Inscription </p>
+    <p class="connexion"> Inscription - À POINT </p>
   </header>
   <form action="/inscription" method="post" name="inscription">
     <div class="login-fields">
       <div class="contain-field">
         <label for="email" class="login-field-username form-label"> Mail :</label>
         <input type="text" placeholder="Ex : mail@domain.com " name="email" id="email" class="input-field-login form-control" required>
+      </div>
+      <div class="contain-field">
+        <label for="companyName" class="login-field-username form-label"> Nom de l'entreprise :</label>
+        <input type="text" placeholder="Nom de votre entreprise" name="companyName" id="companyName" class="input-field-login form-control" required>
+      </div>
+      <div class="contain-field">
+        <label for="sector" class="login-field-username form-label"> Secteur d'activité :</label>
+        <select name="sector" id="sector" class="input-field-login form-control" required>
+          <option value="">Choisissez votre secteur</option>
+          <option value="RESTAURANT">Restaurant</option>
+          <option value="HEALTH_PROFESSIONAL">Professionnel de santé</option>
+          <option value="GARAGE">Garage</option>
+          <option value="HAIRDRESSER">Coiffeur</option>
+          <option value="BEAUTY_INSTITUTE">Institut de beauté</option>
+          <option value="VETERINARIAN">Vétérinaire</option>
+        </select>
+      </div>
+      <div class="contain-field">
+        <label for="address" class="login-field-username form-label"> Adresse :</label>
+        <input type="text" placeholder="Adresse de votre entreprise" name="address" id="address" class="input-field-login form-control">
+      </div>
+      <div class="contain-field">
+        <label for="phoneNumber" class="login-field-username form-label"> Téléphone professionnel :</label>
+        <input type="tel" placeholder="01 23 45 67 89" name="phoneNumber" id="phoneNumber" class="input-field-login form-control">
+      </div>
+      <div class="contain-field">
+        <label for="siret" class="login-field-username form-label"> SIRET (optionnel) :</label>
+        <input type="text" placeholder="123 456 789 01234" name="siret" id="siret" class="input-field-login form-control">
       </div>
       <div class="contain-field">
         <label for="password" class="login-field-password form-label" > Mot de passe :</label>
