--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <title>À POINT - Inscription</title>
@@ -25,6 +25,7 @@
     <p class="connexion"> Inscription - À POINT </p>
   </header>
   <form action="/inscription" method="post" name="inscription">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <div class="login-fields">
       <div class="contain-field">
         <label for="email" class="login-field-username form-label"> Mail :</label>
