feat: Add public booking feature - Allow authenticated users to be redirected from /login and /inscription to /rendez-vous - Add public booking endpoints for unauthenticated users - Create public-booking.html template - Update public-profile.html with direct booking link - Allow unauthenticated access to /rendez-vous/public/** endpoints

--- a/src/main/resources/templates/public-profile.html
+++ b/src/main/resources/templates/public-profile.html
@@ -88,11 +88,11 @@
 
                 <hr class="my-4">
                 <div class="text-center">
-                    <a href="/login?redirect=rendez-vous/nouveau" class="btn btn-primary btn-lg">
+                    <a th:href="@{/rendez-vous/public/nouveau/{id}(id=${company.id})}" class="btn btn-primary btn-lg">
                         📅 Prendre rendez-vous
                     </a>
                     <p class="text-muted mt-2 small">
-                        Connectez-vous pour accéder au système de rendez-vous
+                        Réservez directement sans créer de compte
                     </p>
                 </div>
             </div>
