Added public appointement demands and authentificated user redirection

--- a/src/main/resources/templates/public-booking.html
+++ b/src/main/resources/templates/public-booking.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="'À POINT - Réserver chez ' + ${professional.companyName}">À POINT - Réserver un rendez-vous</title>
 
     <!-- Fonts -->
