--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -25,6 +25,13 @@
                         <i class="bi bi-person-circle"></i> Mon profil
                     </a>
                 </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" 
+                       th:classappend="${activePage == 'billing' ? 'active' : ''}"
+                       href="/facturation" th:href="@{/facturation}">
+                        <i class="bi bi-receipt"></i> Facturation
+                    </a>
+                </li>
             </ul>
 
             <ul class="navbar-nav">
